Stop horizontal scroll
Fixes #4

Nasty hack!

--- a/style.css
+++ b/style.css
@@ -478,6 +478,7 @@ body {
 
 	/*Firefox isn't happy!*/
 	/*background-attachment: fixed;*/
+	overflow-x: hidden;
 }
 
 blockquote:before,
